COOPERATION WITH GOVERNMENT SECTION TRANSLATE

--- a/src/translation/locales/en/translationEn.json
+++ b/src/translation/locales/en/translationEn.json
@@ -5,5 +5,14 @@
   "ContactUs": "Написати нам",
   "Charity": "Благодійний фонд",
   "FoundName": "Відчуй тепло",
-  "HeaderTitle": "Об'єднання небайдужих людей, які поєднали свої зусилля задля допомоги Україні"
+  "HeaderTitle": "Об'єднання небайдужих людей, які поєднали свої зусилля задля допомоги Україні",
+  "AboutTitle": "Об'єднання людей, яке допомагає тим, хто цього потребує",
+  "AboutText": "Важливим аспектом діяльності нашого фонду є офіційна співпраця з Міністерством охорони здоров’я України та іншими державними органами та органами місцевого самоврядування.",
+  "AboutSecondText": "У тісній співпраці з вищевказаними органами, «Благодійний фонд «Відчуй тепло» допомагає цивільному населенню, Збройним силам України та силам територіальної оборони громад у забезпеченні першочергових соціальних, медичних та інших нагальних потреб в умовах воєнного стану.",
+  "ContactUsButton": "Зв'язатися з нами",
+  "PriceListTitle": "Співпраця з органами державної влади",
+  "PriceListFirstItem": "лист Міністерства охорони здоров’я України щодо співпраці з фондом",
+  "PriceListSecondItem": "лист Департаменту житлово-комунальної інфраструктури виконавчого органу КМР (КМДА)",
+  "PriceListThirdItem": "лист Бобровицької міської ради Чернігівської області",
+  "PriceListDownload": "завантажити"
 }
