--- a/src/translation/locales/en/translationEn.json
+++ b/src/translation/locales/en/translationEn.json
@@ -14,5 +14,19 @@
   "PriceListFirstItem": "лист Міністерства охорони здоров’я України щодо співпраці з фондом",
   "PriceListSecondItem": "лист Департаменту житлово-комунальної інфраструктури виконавчого органу КМР (КМДА)",
   "PriceListThirdItem": "лист Бобровицької міської ради Чернігівської області",
-  "PriceListDownload": "завантажити"
+  "PriceListDownload": "завантажити",
+  "FeaturesTitle": "Цифри",
+  "FeaturesText": "Чим ми допомагаємо?",
+  "FeaturesSecondText": "Ми допомагаємо тим, хто цього найбільше потребує. Кожен може долучитися і внести свій вклад в добробут країни",
+  "FeaturesfirstItem": "тон переданих продуктів",
+  "FeaturesSecondItem": "тон переданих ліків",
+  "FeaturesThirdItem": "швидкі передано для лікарень",
+  "FeaturesFourthItem": "комплектів лікарського обладнання",
+  "GoodsTitle": "Як можна долучитися до допомоги?",
+  "GoodsText": "Кожен може долучитися до допомоги нашим військовим чи цивільному населенню шляхом перерахунку коштів на благодійний рахунок Благодійної організації «Благодійний фонд «Відчуй тепло» за наступними реквізитами: р/р (IBAN) UA793204780000026005924919779;",
+  "GoodsSecondText": "Також ти можешь стати волонтером та допомагати фонду у його повсякденній діяльності разом з нашою чудовою командою патріотів.",
+  "GoodsThirdText": "Хочу допомогти",
+  "FooterTitle": "Контакти",
+  "FooterHoursOfWork": "Час роботи",
+  "FooterHoursOfWorkInfo": "Кожен день з 10:00 до 20:00"
 }
