translate on mobile width done

--- a/src/translation/locales/ua/translationUa.json
+++ b/src/translation/locales/ua/translationUa.json
@@ -28,6 +28,6 @@
   "GoodsThirdText": "I want to help",
   "FooterTitle": "Contacts",
   "FooterHoursOfWork": "Work hours",
-  "FooterHoursOfWorkInfo": "Every day from 10:00 am to 08:00 pm"
+  "FooterHoursOfWorkInfo": "every day from 10:00 am to 08:00 pm"
 
 }
